GitOps/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-assignment
  labels:
    istio-injection: enabled
