GitOps/staging/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: devops-assignment-api
  namespace: devops-assignment

spec:
  replicas: 2
  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: devops-assignment-api

  template:
    metadata:
      labels:
        app: devops-assignment-api

    spec:
      containers:
        - name: api
          image: 620893829052.dkr.ecr.ap-south-1.amazonaws.com/devops-assignment-dev-api:7831693b71c9215833d8f71d187830725d84fe26
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15

  strategy:
    canary:
      canaryService: devops-assignment-api-canary
      stableService: devops-assignment-api

      trafficRouting:
        istio:
          virtualService:
            name: devops-assignment-api
            routes:
              - api

      steps:
        - setWeight: 10
        - pause:
            duration: 2m

        - setWeight: 25
        - pause:
            duration: 2m

        - setWeight: 50
        - pause:
            duration: 5m

        - setWeight: 100
