GitOps/staging/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: devops-assignment-api-gateway
  namespace: devops-assignment
spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
